--- a/mobileresources.html
+++ b/mobileresources.html
@@ -163,7 +163,7 @@
     </div>
     <nav id="menuPanel" class="menu-panel" aria-label="Primary navigation">
       <a href="Services.html" tabindex="0">Services</a>
-      <a href="about.html#mission" tabindex="0">About</a>
+      <a href="about.html" tabindex="0">About</a>
       <a href="#partners" tabindex="0">Partners</a>
       <a href="resources.html" tabindex="0">Resources</a>
       <a href="contact.html" tabindex="0">Contact</a>
