--- a/mobilecontact.html
+++ b/mobilecontact.html
@@ -191,7 +191,7 @@
       background: #2563eb; color: #fff;
     }
     .contact-section {
-      flex: 1 1 420px;
+      flex: 1 1 auto;
       background: #22232c;
       border-radius: 16px;
       box-shadow: 0 1px 16px #0405121a;
@@ -199,8 +199,11 @@
       display: flex;
       flex-direction: column;
       align-items: center;
+      max-width: 100%;
+      width: 100%;
+      box-sizing: border-box;
       min-width: 320px;
-      max-width: 460px;
+      margin: 0 auto;
     }
     .contact-section h1 {
       font-size: 2.1rem;
@@ -216,6 +219,8 @@
       gap: 1.1rem 1.4rem;
       align-items: center;
       margin-bottom: 1.3rem;
+      width: 100%;
+      box-sizing: border-box;
     }
     label {
       font-weight: 600;
@@ -239,6 +244,7 @@
       resize: none;
       outline: none;
       transition: border 0.2s;
+      box-sizing: border-box;
     }
     input:focus, textarea:focus {
       border: 1.5px solid #2563eb;
@@ -288,12 +294,12 @@
         gap: 1.8rem;
       }
       .contact-section {
-        padding: 1.2rem .7rem;
-        min-width: unset; max-width: 99vw;
+        padding: 1.2rem 1.5rem;
+        min-width: unset; max-width: 90vw;
       }
       .form-grid {
         grid-template-columns: 1fr;
-        gap: 0.48rem 0;
+        gap: 0.5rem 0;
       }
       label {
         justify-self: start;
@@ -382,40 +388,40 @@
       </form>
     </section>
   </main>
-  <script>
-    // Hamburger menu toggle animation, outside click + accessibility
-    const menuToggle = document.getElementById('menuToggle');
-    const menuPanel = document.getElementById('menuPanel');
+<script>
+  const menuToggle = document.getElementById('menuToggle');
+  const menuPanel = document.getElementById('menuPanel');
 
-    menuToggle.addEventListener('click', function() {
-      menuToggle.classList.toggle('open');
-      menuPanel.classList.toggle('open');
-      menuToggle.setAttribute('aria-expanded', menuPanel.classList.contains('open'));
-    });
+  menuToggle.addEventListener('click', () => {
+    menuToggle.classList.toggle('open');
+    menuPanel.classList.toggle('open');
+    menuToggle.setAttribute('aria-expanded', menuPanel.classList.contains('open'));
+  });
 
-    menuToggle.addEventListener('keydown', function(e) {
-      if(e.key === "Enter" || e.key === " ") {
-        e.preventDefault();
-        menuToggle.click();
-      }
-    });
+  menuToggle.addEventListener('keydown', (e) => {
+    if(e.key === "Enter" || e.key === " ") {
+      e.preventDefault();
+      menuToggle.click();
+    }
+  });
 
-    document.addEventListener('click', function(e) {
-      if (!menuPanel.contains(e.target) && !menuToggle.contains(e.target)) {
-        menuPanel.classList.remove('open');
-        menuToggle.classList.remove('open');
-        menuToggle.setAttribute('aria-expanded', "false");
-      }
-    });
+  document.addEventListener('click', (e) => {
+    if (!menuPanel.contains(e.target) && !menuToggle.contains(e.target)) {
+      menuPanel.classList.remove('open');
+      menuToggle.classList.remove('open');
+      menuToggle.setAttribute('aria-expanded', "false");
+    }
+  });
 
-    window.addEventListener('scroll', function() {
-      if (window.scrollY > 10) {
-        document.querySelector('header').classList.add('scrolled');
-      } else {
-        document.querySelector('header').classList.remove('scrolled');
-      }
-    });
-  </script>
+  window.addEventListener('scroll', () => {
+    if (window.scrollY > 10) {
+      document.querySelector('header').classList.add('scrolled');
+    } else {
+      document.querySelector('header').classList.remove('scrolled');
+    }
+  });
+</script>
 </body>
 </html>
+
 
