--- a/contact.html
+++ b/contact.html
@@ -391,6 +391,30 @@
           </div>
           <button type="submit" class="cta-button">Send Message</button>
         </form>
+        <script>
+  const form = document.getElementById('contactForm');
+  form.addEventListener('submit', function(e) {
+    e.preventDefault();
+    const data = {
+      fullName: form.fullName.value,
+      mobile: form.mobile.value,
+      email: form.email.value,
+      reason: form.reason.value
+    };
+    fetch('YOUR_APPS_SCRIPT_WEB_APP_URL', {
+      method: 'POST',
+      mode: 'no-cors', // prevents CORS errors but no response accessible, optional
+      headers: { 'Content-Type': 'application/x-www-form-urlencoded' },
+      body: new URLSearchParams(data)
+    }).then(() => {
+      alert("Thank you for contacting us!");
+      form.reset();
+    }).catch((error) => {
+      alert("There was an error submitting the form.");
+      console.error(error);
+    });
+  });
+</script>
       </section>
     </div>
   </main>
