--- a/contact.html
+++ b/contact.html
@@ -401,7 +401,7 @@
       email: form.email.value,
       reason: form.reason.value
     };
-    fetch('YOUR_APPS_SCRIPT_WEB_APP_URL', {
+    fetch('https://script.google.com/macros/s/AKfycbwcwG7XNQ8d-39k4xtIWd3w3HlVOI5IJ-DVQlCd12yYkF9iFHdGKxPHVKUKrx2f1deUcA/exec', {
       method: 'POST',
       mode: 'no-cors', // prevents CORS errors but no response accessible, optional
       headers: { 'Content-Type': 'application/x-www-form-urlencoded' },
