--- a/contact.html
+++ b/contact.html
@@ -367,10 +367,16 @@
           </li>
         </ul>
         <div class="contact-social">
-          <a href="#" title="Instagram"><i class="fab fa-instagram"></i></a>
-          <a href="#" title="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
-          <a href="#" title="Facebook"><i class="fab fa-facebook-f"></i></a>
-        </div>
+  <a href="https://www.instagram.com/nestcapitalfinance/" title="Instagram" target="_blank" rel="noopener noreferrer">
+    <i class="fab fa-instagram"></i>
+  </a>
+  <a href="https://www.linkedin.com/company/nest-capital-finance/?fbclid=PAZXh0bgNhZW0CMTEAc3J0YwZhcHBfaWQMMjU2MjgxMDQwNTU4AAGnWACB3nPsJ7A_wuCPoCMRwiM5EnYXflzeKIhRzflz2cfIl_VgC69n3LLcppM_aem_7dJQTkYOyxObLb9N6DZTTQ" title="LinkedIn" target="_blank" rel="noopener noreferrer">
+    <i class="fab fa-linkedin-in"></i>
+  </a>
+  <a href="https://www.facebook.com/yourprofile" title="Facebook" target="_blank" rel="noopener noreferrer">
+    <i class="fab fa-facebook-f"></i>
+  </a>
+</div>
       </aside>
       <section class="contact-section">
         <h1>Contact Us</h1>
