--- a/contact.html
+++ b/contact.html
@@ -370,7 +370,7 @@
   <a href="https://www.instagram.com/nestcapitalfinance/" title="Instagram" target="_blank" rel="noopener noreferrer">
     <i class="fab fa-instagram"></i>
   </a>
-  <a href="https://www.linkedin.com/company/nest-capital-finance/?fbclid=PAZXh0bgNhZW0CMTEAc3J0YwZhcHBfaWQMMjU2MjgxMDQwNTU4AAGnWACB3nPsJ7A_wuCPoCMRwiM5EnYXflzeKIhRzflz2cfIl_VgC69n3LLcppM_aem_7dJQTkYOyxObLb9N6DZTTQ" title="LinkedIn" target="_blank" rel="noopener noreferrer">
+  <a href="https://www.linkedin.com/company/nest-capital-finance/" title="LinkedIn" target="_blank" rel="noopener noreferrer">
     <i class="fab fa-linkedin-in"></i>
   </a>
   <a href="https://www.facebook.com/yourprofile" title="Facebook" target="_blank" rel="noopener noreferrer">
